--- a/Filuet.Hrbl.Ordering.Abstractions/Filuet.Hrbl.Ordering.Abstractions.csproj
+++ b/Filuet.Hrbl.Ordering.Abstractions/Filuet.Hrbl.Ordering.Abstractions.csproj
@@ -5,7 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.18" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
-
 </Project>
