--- a/Tests/Filuet.Hrbl.Ordering.Tests.csproj
+++ b/Tests/Filuet.Hrbl.Ordering.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Filuet.Hrbl.Ordering.Adapter\Filuet.Hrbl.Ordering.Adapter.csproj" />
+    <ProjectReference Include="..\Adapter\Filuet.Hrbl.Ordering.Adapter.csproj" />
   </ItemGroup>
 
 </Project>
