--- a/Adapter/Filuet.Hrbl.Ordering.Adapter.csproj
+++ b/Adapter/Filuet.Hrbl.Ordering.Adapter.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="4.3.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
