copy references local

--- a/Adapter/Filuet.Hrbl.Ordering.Adapter.csproj
+++ b/Adapter/Filuet.Hrbl.Ordering.Adapter.csproj
@@ -10,8 +10,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Abstractions\Filuet.Hrbl.Ordering.Abstractions.csproj" />
-    <ProjectReference Include="..\SDK\Filuet.Hrbl.Ordering.SDK.csproj" />
+    <ProjectReference Include="..\Abstractions\Filuet.Hrbl.Ordering.Abstractions.csproj">
+      <Private>true</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\SDK\Filuet.Hrbl.Ordering.SDK.csproj">
+      <Private>true</Private>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
