--- a/Abstractions/Filuet.Hrbl.Ordering.Abstractions.csproj
+++ b/Abstractions/Filuet.Hrbl.Ordering.Abstractions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,5 +7,9 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Filuet.Hrbl.Ordering.Common\Filuet.Hrbl.Ordering.Common.csproj" />
   </ItemGroup>
 </Project>
