--- a/Tests/Filuet.Hrbl.Ordering.Tests.csproj
+++ b/Tests/Filuet.Hrbl.Ordering.Tests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Abstractions\Filuet.Hrbl.Ordering.Abstractions.csproj" />
     <ProjectReference Include="..\Adapter\Filuet.Hrbl.Ordering.Adapter.csproj" />
   </ItemGroup>
 
