--- a/Abstractions/Filuet.Hrbl.Ordering.Abstractions.nuspec
+++ b/Abstractions/Filuet.Hrbl.Ordering.Abstractions.nuspec
@@ -12,6 +12,6 @@
     <tags>Filuet SDK</tags>
   </metadata>
   <files>
-    <file src="bin\any cpu\$configuration$\**" target="lib" />
+    <file src="bin\$configuration$\**" target="lib" />
   </files>
 </package>
