--- a/Adapter/Filuet.Hrbl.Ordering.Adapter.csproj
+++ b/Adapter/Filuet.Hrbl.Ordering.Adapter.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Abstractions\Filuet.Hrbl.Ordering.Abstractions.csproj" />
     <ProjectReference Include="..\Common\Filuet.Hrbl.Ordering.Common.csproj" />
-    <ProjectReference Include="..\SDK\HrblOrdering.SDK\Filuet.Hrbl.Ordering.SDK.csproj" />
+    <ProjectReference Include="..\SDK\Filuet.Hrbl.Ordering.SDK.csproj" />
   </ItemGroup>
 
   <ItemGroup>
