--- a/Proxy/appsettings.Development.json
+++ b/Proxy/appsettings.Development.json
@@ -2,6 +2,7 @@
   "Hrbl": {
     "Environment": "PRS"
   },
+  "Url": "https://localhost:7015/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
