--- a/Proxy/appsettings.json
+++ b/Proxy/appsettings.json
@@ -13,6 +13,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "Scopes": "access_as_user",
     "CallbackPath": "/signin-oidc"
   },
+  "Url": "https://hrblproxy.azurewebsites.net/",
   "Hrbl": {
     "Environment": "Prod"
   },
